<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnu_spend"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/money"
        style="@style/EditText_Flat_Grey"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_mxlarge"
        android:layout_marginEnd="@dimen/spacing_mxlarge"
        android:background="@drawable/text_round_bg_primary"
        android:hint="@string/money_allowed"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="@dimen/spacing_middle"
        android:singleLine="true"
        android:textColorHint="#616161" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <TextView
        android:id="@+id/tvSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/consumokwh"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_middle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalcularSpend"
        style="@style/ButtonBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_mlarge"
        android:paddingEnd="@dimen/spacing_mlarge"
        android:text="@string/calcular" />

</LinearLayout>