<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_xsmall">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/spacing_small"
            android:layout_toStartOf="@+id/layoutActions"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/registry_interval"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/item_consumo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consumo_interval"
                android:textColor="@color/blue_darken_3" />

            <TextView
                android:id="@+id/item_importe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importe_interval"
                android:textColor="@color/blue_darken_3" />

            <TextView
                android:id="@+id/item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/green_darken_2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnMarkAsOfficial"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_star_off" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/red_darken_2" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_10" />

</LinearLayout>